...
            "state" : "new",
            "value" : "Success"
          }
        }
      }
    },
    "Compare" : {
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sammenlign"
          }
...
            "state" : "translated",
            "value" : "Dato"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Slet"
          }
...
            "state" : "translated",
            "value" : "Slet modermærke"
          }
        }
      }
    },
    "Delete Person" : {
      "comment" : "A button that triggers an alert to confirm or cancel the deletion of a person.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Modermærkehandling"
          }
        }
      }
    },
    "Mole Overview" : {
      "comment" : "The title of the main view in the app.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Åbner kamera..."
          }
        }
      }
    },
    "Overview" : {
      "comment" : "The title of the tab that shows an overview of the user's health data.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "da" : {
          "stringUnit" : {
            "state" : "translated",
...
